# CocosGame

./: README.md
Classes/: AppDelegate.cpp  RootScene.cpp  RootScene.h
Classes/Games/: Control.cpp  Control.h  GameDefs.h  GameFactory.cpp  GameFactory.h  SnacksGame.cpp  SnacksGame.h
Classes/Games/GameObject/: SnackFoods.cpp  SnackFoods.h  SnackSprite.cpp  SnackSprite.h
include/cocos/base/: CCRef.h
lib/win32/Release/: ext_clipper.lib  ext_convertUTF.lib  ext_edtaa3func.lib  ext_md5.lib  ext_poly2tri.lib  ext_recast.lib  ext_tinyxml2.lib  ext_unzip.lib  ext_xxhash.lib  ext_xxtea.lib  external.lib
proj.android/: .gitignore  gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  CMakeLists.txt  CocosGame.jks  build.gradle
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/cocos2dx/: build.gradle
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.win32/: CocosGame.cpp  CocosGame.sln  CocosGame.vcxproj  CocosGame.vcxproj.filters
